games_yall_site/_sass/_base.scss
body {
    font-family: rubik, sans-serif;
    background-color: $baby-powder;
    color: $raisin-black;
    min-width: 390px;
    * {
        box-sizing: border-box;
    }
}

img {
    max-width: 100vw;
}

